--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main{
     overflow: hidden;
     background-color: white;
 }
-#guesses {
+#guessbox {
     text-align: center;
     background-color: darkred;
     padding: 10px;
